--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,24 +1,24 @@
-@use "sass:map";
+@import "sass:map";
 
-@use "functions" as *;
+@import "functions";
 
-@use "common" as *;
-@use "light";
-@use "dark";
+@import "common";
+@import "light";
+@import "dark";
 
-@use "misc";
+@import "misc";
 
-@use "header";
-@use "side-menu";
-@use "side-profile";
-@use "footer";
+@import "header";
+@import "side-menu";
+@import "side-profile";
+@import "footer";
 
 :root {
-  @include add-vars(light.$theme);
+  @include add-vars($light-theme);
 }
 
 [data-theme="dark"] {
-  @include add-vars(dark.$theme);
+  @include add-vars($dark-theme);
 }
 
 * {
