--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   {% else %}
   <title>{{ site.author }}{% if page.title != null and page.title != "" %} | {{ page.title }}{% endif %}</title>
   {% endif %}
-  <link rel="stylesheet" href="{{ "style.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/style.css" | relative_url }}">
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
